--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ dependencies {
     //circle
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
 
+    implementation 'com.android.support:design:30.0.0'
+    implementation  'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation ("com.squareup.okhttp3:okhttp:4.8.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.8.0")
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
